[package]
name = "flex-version"
description = "A crate for flexible version numbers, mostly inspired by Ruby's Gem::Version"
authors = [ "cloudwalk.io" ]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cloudwalk/flex-version"
keywords = [ "version", "versioning", "semver", "semantic-versioning" ]
categories = [ "parsing", "development-tools" ]

[dependencies]
serde = { version = "1.0", optional = true }

[package.metadata.docs.rs]
features = [ "serde" ]
